<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.98"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@drawable/fondo"
        />

    <ScrollView
        android:id="@+id/scroll_redes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tv_redes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_redes"
        >

        <TextView
            android:id="@+id/tv_utm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/utm"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_fci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fci"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@id/tv_utm"
            />

        <TextView
            android:id="@+id/tv_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nombres"
            android:textColor="@android:color/white"
            android:textSize="9sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_fci"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/right"
            android:textColor="@android:color/white"
            android:textSize="7sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_fci"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/iv_logo_utm"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.2"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_utm"
            app:srcCompat="@drawable/logo_utm"
            app:layout_constraintStart_toStartOf="@id/tv_nombres"
            />

        <ImageView
            android:id="@+id/iv_logo_fci"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.2"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_fci"
            app:srcCompat="@drawable/logo_fci"
            app:layout_constraintEnd_toEndOf="@id/tv_right"
            />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/edt_calibrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:inputType="numberSigned"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:text="@string/s_50"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/btn_calibrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calibrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="13dp"
        android:alpha="0.8"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:text="@string/calibrar"
        android:textStyle="bold|italic"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</android.support.constraint.ConstraintLayout>